Looping is working loosely, need to fix spacing

--- a/src/app/shared/sankey-chart/sankey-chart.component.css
+++ b/src/app/shared/sankey-chart/sankey-chart.component.css
@@ -10,9 +10,9 @@
 }
 
 .link {
-    /* fill: none; */
-    /* stroke: #000; */
-    /* opacity: .2; */
+    fill: none;
+    stroke: blue;
+    opacity: .2;
 }
 
 .link:hover {
